--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 NODE_ENV=development
 
-PORT=3000
+PORT=4000
 
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_NAME=type
+DB_NAME=customer
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=t1oyota2
 DB_DIALECT=mysql
 
 JWT_ENCRYPTION=brian
