--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^1.18.9"
+  },
   "dependencies": {
     "@types/bluebird": "^3.5.24",
     "@types/graphql": "^14.0.3",
